feat: add swagger docs and cors
Resolves #19
