# backend/internal/routes/auth/dto.go
@@ -1,4 +1,0 @@
-package auth
-
-type LoginRequest struct {
-}
