# backend/routes/auth/dto.go
@@ -1,0 +1,6 @@
+package auth
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8,max=64"`
+}
