# backend/routes/auth/routes.go
@@ -1,0 +1,16 @@
+package auth
+
+import (
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+type AuthHandler struct {
+	DB *gorm.DB
+}
+
+func (h *AuthHandler) SetupRouter(group *gin.RouterGroup) {
+	router := group.Group("/auth")
+
+	router.POST("/login", h.PostLogin)
+}
